[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[project]
name = "najs"
description = "Simple helper functions for utilizing nats-py"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = ["async-lru", "fastavro", "loguru", "nats-py", "nkeys", "tenacity"]

[tool.pytest.ini_options]
pythonpath = ["src"]
